--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,5 +1,19 @@
 <html>
 <body>
-<div>{{some}}</div>
+<div>
+<form method="post">
+<input type="text" name="text" placeholder="Enter your message"/>
+<input type="text" name="tag" placeholder="Tag">
+<button type="submit">Add a message</button>
+</form>
+</div>
+<div>List of messages</div>
+{{#messages}}
+<div>
+<b>{{id}}</b>
+<span>{{text}}</span>
+<i>{{tag}}</i>
+</div>
+{{/messages}}
 </body>
 </html>
